# RootlessSelfDSP-S24Ultra

./: .gitignore  README.md  gradle.properties  settings.gradle
app/src/main/cpp/: CMakeLists.txt  s24_ultra_dsp.c
app/src/main/cpp/libjamesdsp/: README.md  linksRegardingDatatype.txt
app/src/main/cpp/libjamesdsp-wrapper/: EelVmVariable.cpp  JArrayList.cpp  JArrayList.h  JamesDspWrapper.cpp
app/src/main/cpp/libjamesdsp/Main/: README.md
app/src/main/cpp/libjamesdsp/Main/CLI/: Beyerdynamic DT770-80-4.vdc  JamesDSPLib.sln  JamesDSPLib.vcxproj  JamesDSPLib.vcxproj.filters  hpfloat.eel  main.c
app/src/main/cpp/libjamesdsp/Main/DSPManager/: .project  AndroidManifest.xml  lint.xml  proguard.txt  project.properties
app/src/main/cpp/libjamesdsp/Main/DSPManager/jni/libsamplerate/: Android.mk  common.h  samplerate.c  src_linear.c  src_sinc.c
app/src/main/cpp/libjamesdsp/Main/DSPManager/jni/main/: Android.mk  JdspImpResToolbox.c  interpolation.h
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/drawable/: empty_icon.xml  top_shadow.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/layout/: activity_main.xml  compander.xml  compander_popup.xml  eq.xml  eq_popup.xml  seek_bar_preference.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/menu/: menu.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/values/: arrays.xml  config.xml  nontranslatables.xml  strings.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/values-ru/: arrays.xml  strings.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/values-zh-rCN/: arrays.xml  strings.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/values-zh-rHK/: arrays.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/values-zh-rTW/: strings.xml
app/src/main/cpp/libjamesdsp/Main/DSPManager/res/xml/: speaker_preferences.xml
app/src/main/cpp/libjamesdsp/Main/libjamesdsp/jni/: Application.mk
app/src/main/cpp/libjamesdsp/Main/libjamesdsp/jni/jamesdsp/: Android.mk  MemoryUsage.h  cpthread.c  essential.h  jamesdsp.c
app/src/main/cpp/libjamesdsp/Main/libjamesdsp/jni/jamesdsp/jdsp/: binaryBlobs.c  jdspController.c  jdsp_header.h
app/src/main/cpp/libjamesdsp/Misc/: audio_effects.conf  audio_effects_no_bundlewrapper.conf
app/src/main/cpp/libjamesdsp/Tutorials/: LICENSE  README.md
app/src/main/cpp/libjamesdsp/Tutorials/jni/: Android.mk  Application.mk
app/src/main/cpp/libjamesdsp/Tutorials/src/: essential.h  jamesdsp.c
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/: README.md
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/Audio_Engine/eclipse_libjamesdsp_free_bp/: .cproject  .project  AndroidManifest.xml
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/Audio_Engine/eclipse_libjamesdsp_free_bp/jni/: Android.mk  Application.mk  ArbFIRGen.c  ArbFIRGen.h  AutoConvolver.c  AutoConvolver.h  Effect.cpp  Effect.h  EffectDSPMain.cpp  EffectDSPMain.h  JLimiter.c  JLimiter.h  bs2b.c  bs2b.h  compressor.c  compressor.h  fftw3.h  jamesdsp.cpp  mnspline.c  mnspline.h  reverb.c  reverb.h  vdc.c  vdc.h
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/Audio_Engine/eclipse_libjamesdsp_free_bp/jni/hardware/: audio_effect.h  audio_policy.h  hardware.h
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/Audio_Engine/eclipse_libjamesdsp_free_bp/jni/kissfft/: _kiss_fft_guts.h  kiss_fft.h
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/: .classpath  .cproject  .project  AndroidManifest.xml  lint.xml  project.properties
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/jni/: Android.mk  Application.mk
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/jni/FLAC/: Android.mk  config.h
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/jni/libsamplerate/: Android.mk  src_sinc.c
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/jni/libsndfile/: Android.mk  aiff.c  alaw.c  au.c  audio_detect.c  avr.c  broadcast.c  caf.c  cart.c  chanmap.c  chunk.c  command.c  common.c  common.h  config.h  config.h.in  dither.c  double64.c  dwd.c  dwvw.c  file_io.c  flac.c  float32.c  g72x.c  gsm610.c  htk.c  id3.c  ima_adpcm.c  interleave.c  ircam.c  macos.c  mat4.c  mat5.c  mpc2k.c  ms_adpcm.c  nist.c  paf.c  pcm.c  pvf.c  raw.c  (+21 more)
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/jni/main/: Android.mk  AutoConvolver.c  AutoConvolver.h  JdspImpResToolbox.c
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/res/drawable/: pager_background.xml
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/res/layout/: drawer_item.xml  equalizer.xml  equalizer_popup.xml  help.xml
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/res/values-ru/: arrays.xml  strings.xml
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/res/values-zh-rTW/: arrays.xml  strings.xml
app/src/main/cpp/libjamesdsp/VeryOldOpen_source_edition/DSPManager_Free_BitPerfect/res/xml/: headset_preferences.xml
app/src/main/cpp/libjamesdsp/ViPERToolBox/: AssemblyInfo.cs  ViPERToolBox.csproj  ViPERToolBox.sln
app/src/main/cpp/libjamesdsp/ViPERToolBox/Properties/: Resources.Designer.cs
app/src/main/cpp/libjamesdsp/ViPERToolBox/ViPERToolBox/: Biquad.cs  DDCContext.cs  MUI.cs  Program.cs  frmAddPoint.cs  frmEditPoint.cs  frmMain.cs  frmMain.resx
app/src/main/cpp/libjamesdsp/ViPERToolBox/ViPERToolBox/Properties/: Resources.cs  Settings.cs
app/src/main/cpp/libjdspimptoolbox/main/: JdspImpResToolbox.c
app/src/main/cpp/vulkan_spectrum/: spectrum_config.cpp  spectrum_config.h  vulkan_renderer.cpp  vulkan_renderer.h
app/src/main/cpp/vulkan_spectrum/shaders/: compile_shaders.sh  spectrum.frag  spectrum.vert  spectrum_frag.h  spectrum_vert.h  terrain_comp.h
(+369 files in other folders)
